fixed gap

--- a/src/app/containers/homepage/homepage.component.css
+++ b/src/app/containers/homepage/homepage.component.css
@@ -116,15 +116,15 @@
 @media screen and (max-width: 600px) {
   .nav-opener {
     color: black !important;
+    padding: 0;
   }
   .notauth {
-    width: 100vw;
+    width: 100%;
     display: flex;
     gap: 1rem;
+    background-color: #5cadfe;
   }
-  .homepage-content-container {
-    width: 100%;
-  }
+
   .example-container {
     position: absolute;
     top: 4rem;
@@ -155,10 +155,12 @@
   .main-container {
     display: flex;
     flex-direction: column;
-    max-width: 100vw;
     overflow: hidden;
   }
 
   .container {
+    margin: 0;
+    padding: 1rem;
+    width: fit-content;
   }
 }
